--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "css-loader": "^6.1.0",
     "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
